implémentation du event register pour le serveur