@@ -57,8 +57,9 @@ public class LindaServer extends java.rmi.server.UnicastRemoteObject implements 
     }
 
     @Override
-    public void eventRegister(eventMode mode, eventTiming timing, Tuple template, Callback callback) throws RemoteException {
-        // TODO Auto-generated method stub
+    public void  eventRegister(linda.Linda.eventMode mode, linda.Linda.eventTiming timing, Tuple template, RemoteCallbackInterface callback) throws RemoteException {
+        RemoteCallbackServeur rcs = new RemoteCallbackServeur(callback);
+        lindaCentralise.eventRegister(mode, timing, template, (Callback) rcs);
         
     }
 
@@ -71,7 +72,7 @@ public class LindaServer extends java.rmi.server.UnicastRemoteObject implements 
         String URI;
         int port;
         try {
-            Integer I = new Integer(args[0]);
+            Integer I = Integer.valueOf(args[0]);
             port = I.intValue();
         }
         catch (Exception e) {
